--- a/report.html
+++ b/report.html
@@ -219,36 +219,92 @@ df &lt;- fread(&quot;./sample_data.csv&quot;)
 
 ## attribute description simple table
 meaning &lt;- c(&quot;number of campaign&quot;, &quot;number of days&quot;, &quot;Cumulative sum of campaigns revenue&quot;)
-features &lt;- c(&quot;c1/c2/c3&quot;,&quot;days&quot;, &quot;cumsum_revenue&quot;) 
-table.df = cbind(features, meaning)
-htmlTable(table.df)
+attribute &lt;- c(&quot;c1/c2/c3&quot;,&quot;days&quot;, &quot;cumsum_revenue&quot;) 
+table.df = cbind(attribute, meaning)
+htmlTable(table.df, align=&#39;c|c&#39;)
 </code></pre>
 
 <table class='gmisc_table' style='border-collapse: collapse;' >
 <thead>
 <tr>
-<th style='border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>features</th>
+<th style='border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>attribute</th>
 <th style='border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: center;'>meaning</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style='text-align: center;'>c1/c2/c3</td>
+<td style='border-right: 1px solid black; text-align: center;'>c1/c2/c3</td>
 <td style='text-align: center;'>number of campaign</td>
 </tr>
 <tr>
-<td style='text-align: center;'>days</td>
+<td style='border-right: 1px solid black; text-align: center;'>days</td>
 <td style='text-align: center;'>number of days</td>
 </tr>
 <tr>
-<td style='border-bottom: 2px solid grey; text-align: center;'>cumsum_revenue</td>
+<td style='border-bottom: 2px solid grey; border-right: 1px solid black; text-align: center;'>cumsum_revenue</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>Cumulative sum of campaigns revenue</td>
 </tr>
 </tbody>
 </table>
 
+<pre><code class="r">kable(head(iris), format = &quot;markdown&quot;, align=&quot;c&quot;)
+</code></pre>
+
+<table><thead>
+<tr>
+<th align="center">Sepal.Length</th>
+<th align="center">Sepal.Width</th>
+<th align="center">Petal.Length</th>
+<th align="center">Petal.Width</th>
+<th align="center">Species</th>
+</tr>
+</thead><tbody>
+<tr>
+<td align="center">5.1</td>
+<td align="center">3.5</td>
+<td align="center">1.4</td>
+<td align="center">0.2</td>
+<td align="center">setosa</td>
+</tr>
+<tr>
+<td align="center">4.9</td>
+<td align="center">3.0</td>
+<td align="center">1.4</td>
+<td align="center">0.2</td>
+<td align="center">setosa</td>
+</tr>
+<tr>
+<td align="center">4.7</td>
+<td align="center">3.2</td>
+<td align="center">1.3</td>
+<td align="center">0.2</td>
+<td align="center">setosa</td>
+</tr>
+<tr>
+<td align="center">4.6</td>
+<td align="center">3.1</td>
+<td align="center">1.5</td>
+<td align="center">0.2</td>
+<td align="center">setosa</td>
+</tr>
+<tr>
+<td align="center">5.0</td>
+<td align="center">3.6</td>
+<td align="center">1.4</td>
+<td align="center">0.2</td>
+<td align="center">setosa</td>
+</tr>
+<tr>
+<td align="center">5.4</td>
+<td align="center">3.9</td>
+<td align="center">1.7</td>
+<td align="center">0.4</td>
+<td align="center">setosa</td>
+</tr>
+</tbody></table>
+
 <pre><code class="r">## show data
-htmlTable(df)
+htmlTable(df, align=&#39;c|c|c|c|c&#39;)
 </code></pre>
 
 <table class='gmisc_table' style='border-collapse: collapse;' >
@@ -265,98 +321,98 @@ htmlTable(df)
 <tbody>
 <tr>
 <td style='text-align: left;'>1</td>
-<td style='text-align: center;'>1</td>
-<td style='text-align: center;'>5</td>
-<td style='text-align: center;'>5</td>
-<td style='text-align: center;'>1</td>
+<td style='border-right: 1px solid black; text-align: center;'>1</td>
+<td style='border-right: 1px solid black; text-align: center;'>5</td>
+<td style='border-right: 1px solid black; text-align: center;'>5</td>
+<td style='border-right: 1px solid black; text-align: center;'>1</td>
 <td style='text-align: center;'>3.67</td>
 </tr>
 <tr>
 <td style='text-align: left;'>2</td>
-<td style='text-align: center;'>3</td>
-<td style='text-align: center;'>6</td>
-<td style='text-align: center;'>6</td>
-<td style='text-align: center;'>2</td>
+<td style='border-right: 1px solid black; text-align: center;'>3</td>
+<td style='border-right: 1px solid black; text-align: center;'>6</td>
+<td style='border-right: 1px solid black; text-align: center;'>6</td>
+<td style='border-right: 1px solid black; text-align: center;'>2</td>
 <td style='text-align: center;'>5</td>
 </tr>
 <tr>
 <td style='text-align: left;'>3</td>
-<td style='text-align: center;'>13.8</td>
-<td style='text-align: center;'>8</td>
-<td style='text-align: center;'>33</td>
-<td style='text-align: center;'>3</td>
+<td style='border-right: 1px solid black; text-align: center;'>13.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>8</td>
+<td style='border-right: 1px solid black; text-align: center;'>33</td>
+<td style='border-right: 1px solid black; text-align: center;'>3</td>
 <td style='text-align: center;'>18.27</td>
 </tr>
 <tr>
 <td style='text-align: left;'>4</td>
-<td style='text-align: center;'>20.8</td>
-<td style='text-align: center;'>18.8</td>
-<td style='text-align: center;'>37</td>
-<td style='text-align: center;'>4</td>
+<td style='border-right: 1px solid black; text-align: center;'>20.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>18.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>37</td>
+<td style='border-right: 1px solid black; text-align: center;'>4</td>
 <td style='text-align: center;'>25.53</td>
 </tr>
 <tr>
 <td style='text-align: left;'>5</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>25.8</td>
-<td style='text-align: center;'>42</td>
-<td style='text-align: center;'>5</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>25.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>42</td>
+<td style='border-right: 1px solid black; text-align: center;'>5</td>
 <td style='text-align: center;'>33.9</td>
 </tr>
 <tr>
 <td style='text-align: left;'>6</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>34.8</td>
-<td style='text-align: center;'>50</td>
-<td style='text-align: center;'>6</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>34.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>50</td>
+<td style='border-right: 1px solid black; text-align: center;'>6</td>
 <td style='text-align: center;'>42.4</td>
 </tr>
 <tr>
 <td style='text-align: left;'>7</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>41.8</td>
-<td style='text-align: center;'>57</td>
-<td style='text-align: center;'>7</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>41.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>57</td>
+<td style='border-right: 1px solid black; text-align: center;'>7</td>
 <td style='text-align: center;'>49.4</td>
 </tr>
 <tr>
 <td style='text-align: left;'>8</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>45.8</td>
-<td style='text-align: center;'>58</td>
-<td style='text-align: center;'>8</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>45.8</td>
+<td style='border-right: 1px solid black; text-align: center;'>58</td>
+<td style='border-right: 1px solid black; text-align: center;'>8</td>
 <td style='text-align: center;'>51.9</td>
 </tr>
 <tr>
 <td style='text-align: left;'>9</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>50.8</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>9</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>50.8</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>9</td>
 <td style='text-align: center;'>50.8</td>
 </tr>
 <tr>
 <td style='text-align: left;'>10</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>58.8</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>10</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>58.8</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>10</td>
 <td style='text-align: center;'>58.8</td>
 </tr>
 <tr>
 <td style='text-align: left;'>11</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>65.8</td>
-<td style='text-align: center;'></td>
-<td style='text-align: center;'>11</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>65.8</td>
+<td style='border-right: 1px solid black; text-align: center;'></td>
+<td style='border-right: 1px solid black; text-align: center;'>11</td>
 <td style='text-align: center;'>65.8</td>
 </tr>
 <tr>
 <td style='border-bottom: 2px solid grey; text-align: left;'>12</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'></td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>66.8</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'></td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>12</td>
+<td style='border-bottom: 2px solid grey; border-right: 1px solid black; text-align: center;'></td>
+<td style='border-bottom: 2px solid grey; border-right: 1px solid black; text-align: center;'>66.8</td>
+<td style='border-bottom: 2px solid grey; border-right: 1px solid black; text-align: center;'></td>
+<td style='border-bottom: 2px solid grey; border-right: 1px solid black; text-align: center;'>12</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>66.8</td>
 </tr>
 </tbody>
@@ -415,17 +471,11 @@ polynomial_3 &lt;- function (y) {
 }
 
 
-
 models = list(&quot;linear&quot; = linear, 
               &quot;logarithmic&quot; = logarithmic,
               &quot;exponential&quot; = exponential, 
               &quot;polynomial_2&quot; = polynomial_2, 
               &quot;polynomial_3&quot; = polynomial_3)
-
-models$linear(df, df$cumsum_revenue, df$days, times)
-</code></pre>
-
-<pre><code>## Error in models$linear(df, df$cumsum_revenue, df$days, times): unused arguments (df$cumsum_revenue, df$days, times)
 </code></pre>
 
 <h2>Save curves plot into list</h2>
@@ -469,12 +519,16 @@ for (i in seq(models)) {
          ylab = &quot;Cumulative campaign revenue&quot;, xlab=&quot;Number of days&quot;, 
          cex.lab=1.5, cex.main=1.5, ylim=c(ylim.min, ylim.max),
          xlim=c(0,60), col = &#39;#FF00007F&#39;, lwd=4) 
+
     # add grid
     grid(NA, NULL)
+
     # add points from original data
     points(df$days, df$cumsum_revenue, col=&quot;#0000FF7F&quot;, pch = 16, cex = 1.8)
+
     # modificate the plot axis
     axis(1, at=seq(0,60,10), labels=seq(0,60,10))
+
     # add legend to a plot
     legend(&quot;topright&quot;, bty=&quot;n&quot;, 
            legend=c(paste(&quot;Estimation by&quot;, name, &quot;function&quot;), &quot;Campaign revenue&quot;, 
@@ -483,12 +537,13 @@ for (i in seq(models)) {
            pch=c(NA,16),col=c(&quot;#FF00007F&quot;, &quot;#0000FF7F&quot;), 
            lwd = 4, lty=c(1,0,0), cex = 1.2, pt.cex = 1.8, 
            merge = T, inset=c(-0.1, 0), y.intersp=1.5)
+
     # save every plot into list &#39;plots&#39;
     plots[[i]] = recordPlot()
 }   
 </code></pre>
 
-<pre><code class="r">## assign models name into list &#39;plots&#39;
+<pre><code class="r">## assign model names into plots list
 names(plots) = unlist(name.list)
 </code></pre>
 
@@ -585,65 +640,6 @@ htmlTable(r.squared.table)
 <td style='border-bottom: 2px solid grey; text-align: center;'>exponential</td>
 <td style='border-bottom: 2px solid grey; text-align: center;'>0.769</td>
 </tr>
-</tbody>
-</table>
-
-<pre><code class="r">kable(head(iris), format = &quot;html&quot;)
-</code></pre>
-
-<table>
- <thead>
-  <tr>
-   <th style="text-align:right;"> Sepal.Length </th>
-   <th style="text-align:right;"> Sepal.Width </th>
-   <th style="text-align:right;"> Petal.Length </th>
-   <th style="text-align:right;"> Petal.Width </th>
-   <th style="text-align:left;"> Species </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:right;"> 5.1 </td>
-   <td style="text-align:right;"> 3.5 </td>
-   <td style="text-align:right;"> 1.4 </td>
-   <td style="text-align:right;"> 0.2 </td>
-   <td style="text-align:left;"> setosa </td>
-  </tr>
-  <tr>
-   <td style="text-align:right;"> 4.9 </td>
-   <td style="text-align:right;"> 3.0 </td>
-   <td style="text-align:right;"> 1.4 </td>
-   <td style="text-align:right;"> 0.2 </td>
-   <td style="text-align:left;"> setosa </td>
-  </tr>
-  <tr>
-   <td style="text-align:right;"> 4.7 </td>
-   <td style="text-align:right;"> 3.2 </td>
-   <td style="text-align:right;"> 1.3 </td>
-   <td style="text-align:right;"> 0.2 </td>
-   <td style="text-align:left;"> setosa </td>
-  </tr>
-  <tr>
-   <td style="text-align:right;"> 4.6 </td>
-   <td style="text-align:right;"> 3.1 </td>
-   <td style="text-align:right;"> 1.5 </td>
-   <td style="text-align:right;"> 0.2 </td>
-   <td style="text-align:left;"> setosa </td>
-  </tr>
-  <tr>
-   <td style="text-align:right;"> 5.0 </td>
-   <td style="text-align:right;"> 3.6 </td>
-   <td style="text-align:right;"> 1.4 </td>
-   <td style="text-align:right;"> 0.2 </td>
-   <td style="text-align:left;"> setosa </td>
-  </tr>
-  <tr>
-   <td style="text-align:right;"> 5.4 </td>
-   <td style="text-align:right;"> 3.9 </td>
-   <td style="text-align:right;"> 1.7 </td>
-   <td style="text-align:right;"> 0.4 </td>
-   <td style="text-align:left;"> setosa </td>
-  </tr>
 </tbody>
 </table>
 
