--- a/report.html
+++ b/report.html
@@ -247,59 +247,26 @@ htmlTable(table.df, align=&#39;c|c&#39;)
 </tbody>
 </table>
 
-<pre><code class="r">kable(head(iris), format = &quot;markdown&quot;, align=&quot;c&quot;)
+<pre><code class="r">kable(table.df, format = &quot;markdown&quot;, align=&quot;c&quot;)
 </code></pre>
 
 <table><thead>
 <tr>
-<th align="center">Sepal.Length</th>
-<th align="center">Sepal.Width</th>
-<th align="center">Petal.Length</th>
-<th align="center">Petal.Width</th>
-<th align="center">Species</th>
+<th align="center">attribute</th>
+<th align="center">meaning</th>
 </tr>
 </thead><tbody>
 <tr>
-<td align="center">5.1</td>
-<td align="center">3.5</td>
-<td align="center">1.4</td>
-<td align="center">0.2</td>
-<td align="center">setosa</td>
+<td align="center">c1/c2/c3</td>
+<td align="center">number of campaign</td>
 </tr>
 <tr>
-<td align="center">4.9</td>
-<td align="center">3.0</td>
-<td align="center">1.4</td>
-<td align="center">0.2</td>
-<td align="center">setosa</td>
+<td align="center">days</td>
+<td align="center">number of days</td>
 </tr>
 <tr>
-<td align="center">4.7</td>
-<td align="center">3.2</td>
-<td align="center">1.3</td>
-<td align="center">0.2</td>
-<td align="center">setosa</td>
-</tr>
-<tr>
-<td align="center">4.6</td>
-<td align="center">3.1</td>
-<td align="center">1.5</td>
-<td align="center">0.2</td>
-<td align="center">setosa</td>
-</tr>
-<tr>
-<td align="center">5.0</td>
-<td align="center">3.6</td>
-<td align="center">1.4</td>
-<td align="center">0.2</td>
-<td align="center">setosa</td>
-</tr>
-<tr>
-<td align="center">5.4</td>
-<td align="center">3.9</td>
-<td align="center">1.7</td>
-<td align="center">0.4</td>
-<td align="center">setosa</td>
+<td align="center">cumsum_revenue</td>
+<td align="center">Cumulative sum of campaigns revenue</td>
 </tr>
 </tbody></table>
 
@@ -417,6 +384,104 @@ htmlTable(df, align=&#39;c|c|c|c|c&#39;)
 </tr>
 </tbody>
 </table>
+
+<pre><code class="r">kable(df, format = &quot;markdown&quot;, align=&quot;c&quot;)
+</code></pre>
+
+<table><thead>
+<tr>
+<th align="center">c1</th>
+<th align="center">c2</th>
+<th align="center">c3</th>
+<th align="center">days</th>
+<th align="center">cumsum_revenue</th>
+</tr>
+</thead><tbody>
+<tr>
+<td align="center">1.0</td>
+<td align="center">5.0</td>
+<td align="center">5</td>
+<td align="center">1</td>
+<td align="center">3.67</td>
+</tr>
+<tr>
+<td align="center">3.0</td>
+<td align="center">6.0</td>
+<td align="center">6</td>
+<td align="center">2</td>
+<td align="center">5.00</td>
+</tr>
+<tr>
+<td align="center">13.8</td>
+<td align="center">8.0</td>
+<td align="center">33</td>
+<td align="center">3</td>
+<td align="center">18.27</td>
+</tr>
+<tr>
+<td align="center">20.8</td>
+<td align="center">18.8</td>
+<td align="center">37</td>
+<td align="center">4</td>
+<td align="center">25.53</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">25.8</td>
+<td align="center">42</td>
+<td align="center">5</td>
+<td align="center">33.90</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">34.8</td>
+<td align="center">50</td>
+<td align="center">6</td>
+<td align="center">42.40</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">41.8</td>
+<td align="center">57</td>
+<td align="center">7</td>
+<td align="center">49.40</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">45.8</td>
+<td align="center">58</td>
+<td align="center">8</td>
+<td align="center">51.90</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">50.8</td>
+<td align="center">NA</td>
+<td align="center">9</td>
+<td align="center">50.80</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">58.8</td>
+<td align="center">NA</td>
+<td align="center">10</td>
+<td align="center">58.80</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">65.8</td>
+<td align="center">NA</td>
+<td align="center">11</td>
+<td align="center">65.80</td>
+</tr>
+<tr>
+<td align="center">NA</td>
+<td align="center">66.8</td>
+<td align="center">NA</td>
+<td align="center">12</td>
+<td align="center">66.80</td>
+</tr>
+</tbody></table>
 
 <h2>Curve fitting functions</h2>
 
